force-app/main/default/objects/Goal__c/Goal__c.object-meta.xml
<CustomObject>
    <description>Sales Goal object for tracking annual sales goals and commissions</description>
    <label>Sales Goal</label>
    <nameField>
        <displayFormat>SG-{0000}</displayFormat>
        <label>Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>