force-app/main/default/objects/Goal__c/fields/CommissionPercentage__c.field-meta.xml
<CustomField>
    <fullName>CommissionPercentage__c</fullName>
    <description>Roll-up Summary of achieved percentages from Goal Items (SUM of AchievedPercentage__c)</description>
    <label>Commission Percentage</label>
    <summarizedField>GoalItem__c.AchievedPercentage__c</summarizedField>
    <summaryForeignKey>GoalItem__c.Goal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>