force-app/main/default/objects/Goal__c/fields/CommissionValue__c.field-meta.xml
<CustomField>
    <fullName>CommissionValue__c</fullName>
    <description>Calculated commission value based on sales value and commission percentage</description>
    <formula>SalesValue__c * CommissionPercentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>