force-app/main/default/objects/Goal__c/fields/SalesValue__c.field-meta.xml
<CustomField>
    <fullName>SalesValue__c</fullName>
    <description>Total sales value target for this goal</description>
    <label>Sales Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>