force-app/main/default/objects/Goal__c/validationRules/Salesperson_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Salesperson_Required</fullName>
    <active>true</active>
    <description>O campo Vendedor (Salesperson) é obrigatório na criação/edição da Meta. Lookups para User não podem ser marcados como obrigatórios no nível do campo, então a obrigatoriedade é garantida por esta regra.</description>
    <errorConditionFormula>ISBLANK(Salesperson__c)</errorConditionFormula>
    <errorDisplayField>Salesperson__c</errorDisplayField>
    <errorMessage>O Vendedor é obrigatório.</errorMessage>
</ValidationRule>